--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-*{
-    padding: 0px;
-    margin: 0px;
-}
 .CalculatorBody{
     border: 1px solid black;
     width: 550px;
@@ -15,33 +11,33 @@
     margin: 10px;
     padding: 20px;
     height: 100px;
-    /*border: 1px solid black; Remove from code */
+     /*border: 1px solid black; */
     display: flex;
     flex-direction: row;
     gap: 10px;
 }
-.ResultText{
+#ResultText{
     border: 1px solid black;
     height: 100px;
-    width: 600px;
+    width: 600px ;
+    font-size: 50px;
 }
 .CalculationArea{
     margin: 10px;
     height: 800px;
-    /*border: 1px solid black; Remove from code */
     display: flex;
     flex-direction: row;
     gap: 20px;
 }
 .Numbers{
-    /*border: 1px solid black; Remove from code */
+     /*border: 1px solid black; */
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 10px;
-    
 }
 .Operators{
+    /*border: 1px solid black; */
     padding: 10px;
     padding-top: 18px;
     display: flex;
@@ -60,7 +56,7 @@ button{
     height: 100px;
     width: 100px;
 }
-.ButtonZero{
+#ButtonZero{
     height: 90px;
     width: 340px;
 }
